--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -3,22 +3,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nodeapp-deployment
+  name: myapp-deployment
   labels:
-    app: nodeapp
+    app: myapp
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      app: nodeapp
+      app: myapp
   template:
     metadata:
       labels:
-        app: nodeapp 
+        app: myapp 
     spec:
       containers:
-      - name: nodeserver
-        image: thetips4you/nodeapp:latest
+      - name: myappserver
+        image: arunhn/myapp:latest
         ports:
         - containerPort: 3000
         
@@ -28,10 +28,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: nodeapp-service
+  name: myapp-service
 spec:
   selector:
-    app: nodeapp 
+    app: myapp 
   type: LoadBalancer
   ports:
   - protocol: TCP
